# OSS_Exchange-Rate

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  rates.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: exchange_rate.py  user.py
backend/app/repositories/: exchange_rate_repository.py  user_repository.py
backend/app/schemas/: exchange_rate.py  user.py
backend/app/services/: auth_service.py  exchange_rate_service.py
frontend/: app.py
frontend/components/: __init__.py
frontend/services/: api_client.py
