[project]
name = "exchange-rate-dashboard"
version = "0.1.0"
description = "Streamlit + FastAPI + SQLite3 project for Korea Exim Bank exchange rate monitoring."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.8.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.44.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
